src/components/sections/FataMorgana/style.module.scss
@import '~assets/styles/media.scss';

.topContainer {
  padding: 79px 20px 0;
  @media screen and (min-width: $desktop) {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding: 150px 127px 0;
  }
}

.container {
  display: flex;
  position: relative;
  flex-direction: column;
  justify-content: center;
  padding-bottom: 100px;

  @media screen and (max-width: $desktop){
    padding-bottom: 220px;
  }
}

.title {
  margin-left: 30px;

  @media screen and (min-width: $desktop) {
    margin-left: 30px;
  }
}

.content {
  position: relative;

  @media screen and (min-width: $desktop) {
    display: flex;
    justify-content: space-evenly;
  }
}

.chineseText {
  font-family: 'DFLiKingHei1B', sans-serif;
  font-size: 20px;
  line-height: 23px;
  font-weight: 400;
  letter-spacing: 0.1em;
  color: #FFFFFF;
}

.welcome {
  font-family: 'Hanson', sans-serif;
  font-size: 16px;
  line-height: 17px;
  letter-spacing: 0.05em;
  color: #FFFFFF;
  margin-top: 22px;
  margin-bottom: 5px;

  @media screen and (min-width: $desktop) {
    font-size: 24px;
    line-height: 25px;
    margin-top: 0;
    margin-bottom: 8px;
  }
}

.greenText {
  letter-spacing: 0.03em;
  @media screen and (min-width: $desktop) {
    font-size: 64px;
    line-height: 67px;
    letter-spacing: 0.05em;
    max-width: 461px;
  }
}

.code {
  display: block;
  font-size: 10px;
  line-height: 13px;
  letter-spacing: 0.8em;
  margin-top: 11px;
  margin-bottom: 24px;
  background: linear-gradient(90deg, #FBBF9A -4.09%, #FFE876 9.96%, #12F9F8 28.24%, #9CFD82 55.1%, #FCF16E 78.52%, #FED292 105.6%);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  background-clip: text;
  text-fill-color: transparent;

  @media screen and (min-width: $desktop) {
    font-size: 16px;
    line-height: 21px;
    margin: 27px 0 28px 32px;
  }
}

.cityContainer {
  position: relative;
  display: flex;
  flex-direction: column;
  @media screen and (min-width: $desktop){
    margin-top: -450px;
  }
}

.cityText {
  position: absolute;
  font-size: 20px;
  line-height: 120%;
  text-align: right;
  letter-spacing: 0.08em;
  height: 78px;
  text-transform: uppercase;
  color: #FFFFFF;
  width: 308px;
  z-index: 5;
  border-right: 3px solid #fff;
  padding-right: 22px;
  right: 21px;
  top: 150px;

  @media screen and (min-width: $desktop) {
    position: initial;
    font-family: 'Hanson', sans-serif;
    font-size: 24px;
    letter-spacing: 0.05em;
    width: 400px;
    margin-top: 40px;
  }
}

.quotes {
  margin-right: 25px;
  margin-bottom: -5px;
}


.paragraph {
  @media screen and (min-width: $desktop) {
    width: 552px;
    margin-left: 32px;
    font-size: 16px;
    color: #C1C0C0;
  }
}

.videoWrapper {
  position: relative;
  width: 100%;
  height: 800px;
  overflow: hidden;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: -1;
}

.desktopCity,
.mobileCity{
  object-fit: cover;
  height: 100%;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.mobileCity {
  display: none;
}

.videoWrapper:after {
  content: "";
  position: absolute;
  bottom: 0;
  height: 115px;
  width: 100%;
  background: linear-gradient(180deg, #0B0B0C 0%, rgba(0, 0, 0, 0) 96.17%);
  transform: rotate(-180deg);
}

.mobileTableWrapper {
  padding: 0 20px;
  right: 0;
  left: 0;
  top: 0;
  position: absolute;
}


.videoWrapper:before {
  content: "";
  position: absolute;
  height: 350px;
  z-index: 5;
  left: 0;
  top: -1px;
  width: 100%;
  background: linear-gradient(180deg, #0B0B0C 0%, rgba(0, 0, 0, 0) 96.17%);
}

.secondBlockFataMorgana {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

@media screen and (max-width: $desktop) {
  .mobileCity {
    display: block;
  }

  .desktopCity {
    display: none;
  }
}

.zoomVideo {
  border-radius: 50%;
  width: 467.73px;
  height: 467.73px;
  margin-top: 65px;
  z-index: 5;
  @media screen and (max-width: 1023px){
    position: absolute;
    display: block;
    right: 0;
    left: 0;
    margin: 0 auto;
    bottom: -150px;
  }

  @media screen and (max-width: $m-desktop){
    width: 50vw;
  }

  @media screen and (max-width: $s-tablet){
    width: 80vw;
    height: 80vw;
    margin-top: 0;
    bottom: -75px;
  }
}

.zoomRay {
  position: absolute;

  @media screen and (min-width: 320px){
    transform: rotate(90deg);
    bottom: -100px;
    left: 7vw;
    width: 80vw;
    height: 90vh;
  }

  @media screen and (min-width: $m-mobile)  and (max-width: $s-tablet){
    bottom: -100px;
    left: 10vw;
    width: 80vw;
    height: 80vh;
  }

  @media screen and (min-width: $s-tablet) and (max-width: $desktop) {
    bottom: 0;
    left: 25vw;
    width: 38vw;
    height: 70vh;
  }

  @media screen and (min-width: $desktop) {
    transform: none;
  }

  @media screen and (min-width: $desktop) and (max-width: 1530px) {
    bottom: -54px;
    left: 32%;
    width: 38vw;
    height: 56vh;
  }

  @media screen and (min-width: 1530px) and (max-width: 1800px)  {
    bottom: -120px;
    left: 30%;
    width: 50vw;
    height: 85vh;
  }

  @media screen and (min-width: 1800px)  {
    bottom: -180px;
    left: 20%;
    width: 70vw;
    height: 80vh;
  }
}

